--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   url_launcher: ^5.5.0
   # 轮播图
   flutter_swiper: ^1.1.6
+  # 时间选择
+  flutter_datetime_picker: ^1.4.0
   flutter:
     sdk: flutter
 
